--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=lesson3
 spring.datasource.url=jdbc:mysql://localhost:3306/bau_food
 spring.datasource.username=root
-spring.datasource.password=xBq-qHowq6q_
+spring.datasource.password=!9Y0n%yUgT(V
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
