--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=lesson3
-spring.datasource.url=jdbc:mysql://localhost:3306/bau_food
+spring.datasource.url=jdbc:mysql://localhost:3306/training_java
 spring.datasource.username=root
-spring.datasource.password=!9Y0n%yUgT(V
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
