--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=lesson3
 spring.datasource.url=jdbc:mysql://localhost:3306/training_java
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -17,7 +17,7 @@ server.servlet.session.timeout=86400000
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.format.date=yyyy-MM-dd
-server.port=8080
+server.port=8081
 jwt.secret=w4K9ytzEd5iEx5q4bJywXqS9jRJu6+GlhXkEoS3b8rUJvFdy/3JrFw==
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
