--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,15 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootRun {
+    sourceResources sourceSets.main
+    systemProperties System.properties
+}
+
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
