--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,49 @@
-spring.application.name=lesson3
-spring.datasource.url=jdbc:mysql://localhost:3306/training_java
+spring.application.name=bau_food
+
+# Database - QUAN TRỌNG: Sửa localhost thành mysql cho Docker
+spring.datasource.url=jdbc:mysql://mysql:3306/bau_food
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Server
+server.port=8080
+
+# QUAN TRỌNG: DevTools configuration
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
+spring.devtools.restart.poll-interval=2000
+spring.devtools.restart.quiet-period=1000
+# THÊM: Additional restart configuration
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.exclude=static/**,public/**
+
+# Thymeleaf & MVC
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
 spring.mvc.static-path-pattern=/**
 server.servlet.session.timeout=86400000
-
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.format.date=yyyy-MM-dd
-server.port=8081
+
+# Security & File upload
 jwt.secret=w4K9ytzEd5iEx5q4bJywXqS9jRJu6+GlhXkEoS3b8rUJvFdy/3JrFw==
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 file.upload-dir=uploads/
 
+# Encoding
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
+
+# Logging - THÊM để debug DevTools
+logging.level.org.springframework.boot.devtools=DEBUG
+logging.level.com.yourpackage=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
